--- a/package.json
+++ b/package.json
@@ -9,12 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@react-three/drei": "^10.7.4",
-    "@react-three/fiber": "^9.3.0",
     "lucide-react": "^0.542.0",
-    "next": "14.2.28",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
+    "next": "^14.2.32",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "three": "^0.179.1"
   },
   "devDependencies": {
